web/styles/zulip.css
/* ... */
.selected_message {
    .messagebox-content {
        box-shadow: inset 0 0 0 2px hsl(215deg 47% 50%),
            0 0 0 1px hsl(215deg 47% 50%);
    }
}

.message_sender {
    & i.zulip-icon.zulip-icon-bot {
        font-size: 12px;
    }
}

.sender_name {
    display: inline-block;
    font-weight: 700;
}

.sender_name-in-status {
    margin-right: 3px;
    font-weight: 700;
}

.sender_name_hovered {
    .sender_name,
    .sender_name-in-status {
        color: hsl(200deg 100% 40%);
    }
}

.actions_hover:hover {
    color: hsl(200deg 100% 40%);
}

.always_visible_topic_edit,
.on_hover_topic_read,
.on_hover_topic_unmute {
    opacity: 0.7;

    &:hover {
        cursor: pointer;
        opacity: 1;
    }
}

.on_hover_topic_edit,
.on_hover_topic_unresolve,
.on_hover_topic_resolve,
.on_hover_topic_mute {
    opacity: 0.2;

    &:hover {
        cursor: pointer;
        opacity: 0.7;
    }
}

/* Make the action icon on the message row
   always visible while the popover is open */
.has_actions_popover .actions_hover {
    visibility: visible !important;
    pointer-events: all !important;
    opacity: 1 !important;

    & i:focus {
        /* Avoid displaying a focus outline outside the popover on the \vdots
           icon when opened via the mouse. */
        outline: 0 !important;
    }
}

.has_actions_popover .info {
    opacity: 1;
    visibility: visible;
}

/* Brighten text because of the dark background */
.dark_background a,
.dark_background a:hover,
a.dark_background:hover,
.dark_background {
    color: hsl(0deg 0% 100%) !important;
}

.dark_background a.message_label_clickable:hover {
    color: hsl(200deg 99% 60%);
}

.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.settings-forgot-password {
    display: inline-block;
    position: relative;
    color: hsl(0deg 0% 73%);
    bottom: 4px;
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

.message_row {
    position: relative;
    border-left: 1px solid hsl(0deg 0% 0% / 10%);
    border-right: 1px solid hsl(0deg 0% 0% / 10%);

    .date_row {
        /* We only want padding for the date rows between recipient blocks */
        padding-bottom: 0;

        & span {
            font-size: calc(12em / 14);
            font-style: normal;
            font-weight: 600;
            line-height: 17px; /* identical to box height, or 131% */
            text-align: right;
            letter-spacing: 0.04em;
            color: var(--color-date);
        }
    }
}

div.focused_table {
    display: block;
}

.message_content {
    line-height: 1.214;
    min-height: 17px;
    display: block;
    position: relative;
    overflow: hidden;

    &:empty {
        display: none;
    }

    &.condensed {
        max-height: 8.5em;
        min-height: 0;
        overflow: hidden;
    }

    &.collapsed {
        max-height: 0;
        min-height: 0;
        overflow: hidden;
    }
}

.rtl {
    direction: rtl;
}

.message_edit_content {
    line-height: 18px;
    resize: vertical !important;
    max-height: 24em;
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: hsl(0deg 0% 63%);
}

.message_edit_tooltip {
    display: inline;
    color: hsl(0deg 0% 63%);
}

.message-edit-timer {
    float: right;
    display: none;
    margin-top: 5px;
}

.message-edit-feature-group {
    display: inline-flex;
    margin: 0 auto -5px 10px;
    align-items: baseline;
}

.message_edit_save .loader {
    display: none;
    vertical-align: top;
    position: relative;
    height: 28px;
    margin-top: -10px;
    top: 6px;
    width: 30px;
}

.edit-controls {
    .btn-wrapper {
        cursor: not-allowed;
    }

    .disable-btn {
        pointer-events: none;
    }
}

.topic_edit {
    display: none;
    line-height: 22px;

    .alert {
        display: inline-block;
        margin: 0;
        padding: 0 10px;
        line-height: 17px;
    }
}

#inline_topic_edit {
    margin-bottom: 5px;
    width: 206px;

    &.header-v {
        height: 18px;
        display: inline-block;
        padding: 0 3px;
        vertical-align: baseline;
        line-height: 0px;
        box-shadow: none;
    }
}

#message_edit_topic {
    margin: 0 5px 10px 0;
}

.message_edit_header {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
}

#inline_topic_edit:focus,
#message_edit_topic:focus {
    outline: none;
}

#move_topic_modal select {
    width: auto;
    margin-bottom: 10px;
    max-width: 100%;
}

.topic_move_breadcrumb_messages,
.message_edit_breadcrumb_messages {
    margin: 0 5px 5px 0;
    align-self: center;
    width: 100%;
    white-space: nowrap;

    & label.checkbox {
        /* Place the checkboxes on their own lines. */
        display: block;

        & input {
            margin: 0;
            vertical-align: baseline;
        }

        & + label.checkbox {
            margin-top: 10px;
        }
    }

    & label {
        display: inline-block;
        margin-right: 10px;
    }
}

.message_edit_breadcrumb_messages {
    margin-bottom: 10px;
}

.message_length_controller {
    display: none;
    text-align: center;
    color: hsl(200deg 100% 40%);

    /* to make message-uncollapse easier */
    margin-top: 10px;

    &:hover {
        text-decoration: underline;
    }
}

.bookend {
    margin-top: 10px;
    background-color: transparent;
}

.inline_profile_picture {
    display: inline-block;
    width: 35px;
    height: 35px;
    margin-right: 11px;
    vertical-align: top;
    border-radius: 4px;
    overflow: hidden;

    &.guest-avatar::after {
        outline: 2px solid hsl(0deg 0% 100%);
    }
}

.home-error-bar {
    margin-top: 5px;
    display: none;

    .alert {
        margin-bottom: auto;
    }
}

.streamname {
    font-weight: bold;
}

.top-navbar-border {
    border-right: 1px solid hsl(0deg 0% 88%);
    border-left: 1px solid hsl(0deg 0% 88%);
}
/* ... */

